# Build_part

./: BuildPipeline  CMakeLists.txt  Cppcheck_result.xml  Dockerfile  Jenkinsfile  README.md  jenkinsfile
Cppcheck_reports/: stats.html
cppcheck_reports/: 0.html  index.html
main/: CMakeLists.txt
robot3_test/: log.html  output.xml  report.html
